--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.anko_version = '0.10.5'
+    ext.android_lib_version = '0.10.5'
     repositories {
         google()
         jcenter()
