--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.2.30'
     ext.anko_version = '0.10.5'
     ext.android_lib_version = '27.1.1'
+    ext.glide_version = '4.7.1'
 
     repositories {
         google()
