--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 
     //Android Library
     implementation "com.android.support:appcompat-v7:$android_lib_version"
-    implementation "com.android.support:recyclerview-v7:$android_lib_version"
+    implementation "com.android.support:design:$android_lib_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // Testing
@@ -36,10 +36,18 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    // Anko Commons
-    implementation "org.jetbrains.anko:anko-commons:$anko_version"
-
-    // Anko Layouts
+    //Anko
+    implementation "org.jetbrains.anko:anko-design:$anko_version"
     implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
+    implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
+    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+}
+
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
 }
