--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.anko_version = '0.10.5'
     ext.android_lib_version = '27.1.1'
     ext.glide_version = '4.7.1'
+    ext.picasso_version = '2.71828'
 
     repositories {
         google()
