--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,12 +24,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //Android Library
     implementation "com.android.support:appcompat-v7:$android_lib_version"
     implementation "com.android.support:design:$android_lib_version"
-    implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // Testing
     testImplementation 'junit:junit:4.12'
@@ -43,8 +42,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-recyclerview-v7-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
-    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
+
+    //Picasso
     implementation "com.squareup.picasso:picasso:$picasso_version"
 }
 
