--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 27
     defaultConfig {
-        applicationId "com.qornanali.footballclub_kotlin"
+        applicationId "com.qornanali.footballclubkt"
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
