--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".list_club.ListClubActivity">
+        <activity android:name="com.qornanali.footballclubkt.feature.listclub.ListClubActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".detail_club.DetailClubActivity"></activity>
+        <activity android:name="com.qornanali.footballclubkt.feature.detailclub.DetailClubActivity"></activity>
     </application>
 
 </manifest>
