--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.anko_version = '0.10.5'
     ext.android_lib_version = '27.1.0'
     ext.picasso_version = '2.71828'
+    ext.gson_version = '2.8.5'
 
     repositories {
         google()
