--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,13 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug{
+            buildConfigField("String", "thesportdb_base_url", "\"https://www.thesportsdb.com/api/v1/json/\"")
+            buildConfigField("String", "thesportdb_key", "\"1\"")
+        }
         release {
+            buildConfigField("String", "thesportdb_base_url", "\"https://www.thesportsdb.com/api/v1/json/\"")
+            buildConfigField("String", "thesportdb_key", "\"1\"")
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -37,6 +43,9 @@ dependencies {
 
     //Gson
     implementation "com.google.code.gson:gson:$gson_version"
+
+    //Anko
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 }
 
 kotlin {
