--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.qornanali.footballclubkt.feature.viewleagueschedule.ViewLeagueScheduleActivity">
+        <activity android:name="com.qornanali.footballclubkt.feature.leagueschedule.DisplayEventsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.qornanali.footballclubkt.feature.eventdetail.DisplayEventActivity" />
     </application>
 
 </manifest>
