list player and detail team

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name="com.qornanali.footballclubkt.feature.detailevent.DisplayDetailEventActivity" />
         <activity android:name="com.qornanali.footballclubkt.feature.home.HomeActivity" />
         <activity android:name="com.qornanali.footballclubkt.feature.favoritevent.DisplayFavoriteEventsActivity" />
+        <activity android:name="com.qornanali.footballclubkt.feature.detailteam.DetailTeamActivity" />
     </application>
 
 </manifest>
