--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField("String", "thesportdb_base_url", "\"https://www.thesportsdb.com/api/v1/json/\"")
+        buildConfigField("String", "thesportdb_base_url", "\"https://www.thesportsdb.com/api/v1/json\"")
         buildConfigField("String", "thesportdb_key", "\"1\"")
     }
     buildTypes {
