--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name="com.qornanali.footballclubkt.feature.home.HomeActivity" />
         <activity android:name="com.qornanali.footballclubkt.feature.favoritevent.DisplayFavoriteEventsActivity" />
         <activity android:name="com.qornanali.footballclubkt.feature.detailteam.DetailTeamActivity" />
+        <activity android:name="com.qornanali.footballclubkt.feature.detailplayer.DisplayDetailPlayerActivity" />
     </application>
 
 </manifest>
